# autd3-capi-link-soem

./: .gitignore  .gitmodules  Cargo.toml  Makefile.toml  README.md  ThirdPartyNotice.txt  build.py  cross-aarch64.sh  cross-arm32.sh
.github/actions/setup-build/: action.yml
.github/workflows/: build.yml  release.yml
src/: adapter.rs  lib.rs  local.rs  remote.rs  status.rs  thread_priority.rs
tools/license-checker/: Cargo.toml
tools/license-checker/src/: main.rs
